--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   # whisper_dart: any
   file_picker: any
   ffi: any
+  flutter_faq: any
+  audioplayers: ^0.19.1
 
 
   # The following adds the Cupertino Icons font to your application.
